--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,9 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/firebase-messaging-sw.js",
+              "src/manifest.json"              
             ],
             "styles": [
               "node_modules/ngx-toastr/toastr.css",
@@ -86,7 +88,9 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/firebase-messaging-sw.js",
+              "src/manifest.json"                     
             ],
             "styles": [
               "src/styles.css"
