--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^9.0.7",
     "@angular/router": "^9.0.7",
     "firebase": "^7.8.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^13.0.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.13.0",
